# ticket-psylio

./: .gitignore  load_vectordb_langchain.py  psylio.json  psylio_response_bot.py  pyproject.toml  scrape_kb.py
.devcontainer/: devcontainer.json
chromadb_psylio_kb/: chroma.sqlite3
