[tool.poetry]
name = "ticket-optania"
version = "0.1.0"
description = ""
authors = ["TEAM IA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
langchain = "^0.0.324"
openai = "^0.28.1"
setuptools = "^68.2.2"
tiktoken = "^0.5.1"
streamlit = "^1.28.0"
chromadb = "0.4.15"
scrapy = "^2.11.0"
black = "^23.10.1"
playwright = "^1.40.0"
pysqlite-binary = "^0.5.1.3380300"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
